# euvlok

./: .dockerignore  .envrc  .fallowrc.jsonc  .gitignore  .prettierignore  .ziglint.zon  Cargo.toml  Dockerfile  LICENSE  README.md  biome.jsonc  build.zig  compose.yaml  cspell.json  flake.nix  package.json  tsconfig.json
.github/: dependabot.yml
.github/actions/build-nix-flake-target/: action.yml
.github/actions/nothing-but-nix/: action.yml
.github/actions/setup-bun-dependencies/: action.yml
.github/actions/setup-nix/: action.yml
.github/actions/setup-nix-bun-dependencies/: action.yml
.github/workflows/: bootstrap-release.yaml  build-catppuccin-userstyles.yml  build-configurations.yml  ci.yml  dependabot-auto-merge.yml  flake-update-trivial.yaml  update-browser-extensions.yaml  update-chrome-extensions.yaml  update-custom-packages.yaml
bootstrap/: build-git-for-windows.ps1  tools.toml
crates/boot-cli/: Cargo.toml
crates/boot-cli/src/: cli.rs  commands.rs
crates/boot-core/: Cargo.toml
crates/boot-core/src/: archive.rs  catalog.rs  context.rs  doctor.rs  install.rs  links.rs  ownership.rs  packages.rs  platform.rs  release.rs  setup.rs  toolchain.rs
crates/boot-core/src/archive/: extract.rs  source.rs
crates/boot-core/src/catalog/: archive.rs  bin.rs  build.rs  link.rs  package.rs  source.rs  tests.rs  toolchain.rs  validation.rs
crates/boot-core/src/install/: source_build.rs
crates/bootstrap-cli/: Cargo.toml
crates/bootstrap-cli/src/: commands.rs  completions.rs  main.rs
crates/bootstrap-core/: Cargo.toml
crates/bootstrap-core/src/: archive.rs  catalog.rs  doctor.rs  file.rs  install.rs  lib.rs  links.rs  ownership.rs  platform.rs  progress.rs  runtime.rs  toolchain.rs
crates/bootstrap-core/src/catalog/: tests.rs  validation.rs
crates/chezmoi/: Cargo.toml
crates/chezmoi-support/: Cargo.toml
crates/chezmoi-support/src/: command.rs  context.rs  error.rs  fs.rs  github.rs  main.rs  raycast.md  raycast.rs  shell.rs  vscode.rs  zed.rs
crates/chezmoi-support/src/raycast/: beta_scripts.rs  bundle.rs  local_user.rs  window_db.rs
crates/chezmoi/src/: command.rs  error.rs  raycast.md  raycast.rs  shell.rs  yazi.rs  zed.rs
crates/chezmoi/src/raycast/: backend_patch.rs  frontend_patch.rs
crates/common/: Cargo.toml
crates/common/src/: fs.rs  hash.rs  http.rs  lib.rs  nix.rs  process.rs  template.rs
crates/dotfiles-common/: Cargo.toml
crates/dotfiles-common/src/: http.rs  lib.rs
dotfiles/flameflag/: .chezmoiexternal.toml.tmpl  .chezmoiignore  .chezmoiremove  dot_bash_profile.tmpl  dot_bashenv.tmpl  dot_bashrc.tmpl  dot_gitconfig.tmpl  dot_gitignore_global  dot_zshenv.tmpl  dot_zshrc.tmpl
dotfiles/flameflag/.chezmoi-lib/: README.md
dotfiles/flameflag/.chezmoiscripts/: run_once_zed_install_catppuccin_theme  run_once_zed_install_catppuccin_theme.sh.tmpl  run_once_zed_install_catppuccin_theme.zig  run_onchange_after_install-vs-extensions  run_onchange_after_install-vs-extensions.zig  run_onchange_after_nushell_init  run_onchange_after_nushell_init.zig  run_onchange_after_raycast_beta_patch  run_onchange_after_raycast_window_management  run_onchange_after_raycast_window_management.zig  run_onchange_after_terminal_app_catppuccin_pink.tmpl  run_onchange_after_yazi_init  run_onchange_after_yazi_init.zig  run_onchange_after_zsh_bash_init  run_onchange_after_zsh_bash_init.zig  run_onchange_install-vs-extensions.sh.tmpl  run_onchange_nushell_init.sh  run_onchange_yazi_init.sh  run_onchange_zsh_bash_init.sh
dotfiles/flameflag/.chezmoiscripts-zig/: run_once_zed_install_catppuccin_theme.zig  run_onchange_after_install-vs-extensions.zig  run_onchange_after_nushell_init.zig  run_onchange_after_raycast_window_management.zig  run_onchange_after_yazi_init.zig  run_onchange_after_zsh_bash_init.zig  script.zig
dotfiles/flameflag/.chezmoitemplates/: agent_statusline_config.toml  catppuccin.nu  config.nu  env.nu  ghostty_config.tmpl  nushell_aliases.nu  nushell_config.nu.tmpl  nushell_env.nu.tmpl  vscode_settings.json
dotfiles/flameflag/dot_claude/: settings.json
dotfiles/flameflag/dot_codex/: config.toml.tmpl
dotfiles/flameflag/dot_config/: starship.toml
dotfiles/flameflag/dot_ssh/: allowed_signers  config.tmpl  private_github_key.tmpl
fixtures/: alt-tab.toml
flake-modules/: dev-shell.nix  hosts.nix  modules.nix  packages.nix
flake-modules/users/: ashuramaruzxc.nix  bigshaq9999.nix  default.nix  flake.nix  flameflag.nix  lay-by.nix  sm-idk.nix
hosts/hm/ashuramaruzxc/: aliases.nix  dconf.nix  default.nix  flatpak.nix  helix.nix  nixcord.nix  ssh.nix  vscode.nix  zed.nix
hosts/hm/bigshaq9999/: default.nix  git.nix  niri.nix  nixcord.nix  nushell.nix  ssh.nix  starship.nix  yazi.nix
hosts/hm/flameflag/: aliases.nix  git.nix  jujutsu.nix  nixcord.nix
hosts/hm/lay-by/: alacritty.nix  aliases.nix  default.nix  git.nix  kdeconnect.nix  nixcord.nix  rofi.nix  rofi.rasi  ssh.nix  stylix.nix
hosts/hm/lay-by/hyprland/scripts/: Cargo.toml  default.nix  music.sh
hosts/hm/lay-by/hyprland/scripts/src/: build.zig  music.zig  nvidia.zig  weather.zig
hosts/hm/sm-idk/: git.nix
lib/: catppuccin.nix  default.nix  tsconfig.json
lib/ts/: core.ts  files.ts  git.ts  nix.ts  shell.ts  utils.ts
modules/cross/: nix.nix  nixpkgs.nix  packages.nix
modules/darwin/: default.nix  nix.nix  sops.nix  system.nix  zsh.nix
modules/hm/: catppuccin-gtk.nix  catppuccin.nix  default.nix  nixpkgs.nix  sops.nix
modules/nixos/: amd.nix  boot.nix  cosmic.nix  default.nix  ghidra-mcp.nix  gnome.nix  hardware.nix  locale.nix  nvidia-driver.nix  nvidia.nix  plasma.nix  services.nix  sessionVariables.nix  sops.nix  steam.nix  zed-remote.nix  zram.nix
modules/scripts/: browser-extensions-update.cs  chromium-extensions-update.cs  nvidia-prefetch.sh
pkgs/: catppuccin-userstyles.nix  helium-browser.nix  yt-dlp.nix
scripts/: build-catppuccin-userstyles.ts
scripts/github/: check-workflows.ts  lint-workflows.ts  update-browser-extensions.ts  update-custom-packages.ts  update-trivial-flake-inputs.ts
secrets/: ashuramaruzxc_unsigned-int32.yaml  flameflag.yaml
(+288 files in other folders)
