[workspace]
members = ["packages/auto-rebase"]
resolver = "3"

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
exit = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
multiple_crate_versions = "allow"

[profile.dev]
overflow-checks = true

[profile.release]
codegen-units = 1
debug-assertions = true
lto = "thin"
overflow-checks = true
panic = "abort"
