[workspace]
members = [
    "crates/bootstrap-cli",
    "crates/bootstrap-core",
    "crates/chezmoi-support",
    "crates/dotfiles-common",
    "packages/auto-rebase",
    "packages/browser-extensions-update",
    "packages/catppuccin-userstyles",
    "packages/github-maintenance",
    "packages/http-fixture",
    "packages/nvidia-prefetch",
    "packages/zellij-theme-tools",
    "hosts/hm/lay-by/hyprland/scripts",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/euvlok/euvlok"

[workspace.dependencies]
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
comfy-table = "7.2.2"
directories = "6.0.0"
flate2 = "1.1.9"
fs-err = "3.3.0"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.46"
tempfile = "3.27.0"
thiserror = "2.0.18"
tiny_http = { version = "0.12.0", features = ["ssl-rustls"] }
toml = "1.1.2"
toml_edit = "0.25.11"
url = "2.5.8"
walkdir = "2.5.0"
which = "8.0.2"
xz2 = "0.1.7"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"
expect_used = "deny"
missing_safety_doc = "deny"
multiple_crate_versions = "allow"
multiple_unsafe_ops_per_block = "deny"
panic = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"

[profile.dev]
overflow-checks = true

[profile.release]
codegen-units = 1
debug-assertions = true
lto = "thin"
overflow-checks = true
panic = "abort"
