[package]
name = "bootstrap-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
bootstrap-core = { path = "../boot-core" }
clap.workspace = true
clap-markdown.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
clap_mangen.workspace = true
comfy-table.workspace = true
itertools.workspace = true
miette.workspace = true
serde_json.workspace = true

[dev-dependencies]
fs-err.workspace = true
tempfile.workspace = true

[lints]
workspace = true
