[package]
name = "bootstrap-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
bootstrap-core = { path = "../bootstrap-core" }
clap.workspace = true
clap-markdown = "0.1.5"
clap_complete = "4.6.5"
clap_complete_nushell = "4.6.0"
clap_mangen = "0.3.0"
comfy-table.workspace = true
miette = { version = "7.6.0", features = ["fancy"] }
serde_json.workspace = true

[dev-dependencies]
fs-err.workspace = true
tempfile.workspace = true

[lints]
workspace = true
