[package]
name = "chezmoi-support"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "chezmoi-support"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete = "4.6.5"
clap_complete_nushell = "4.6.0"
directories.workspace = true
dotfiles-common = { version = "0.1.0", path = "../dotfiles-common" }
flate2.workspace = true
fs-err.workspace = true
hex = "0.4.3"
miette = { version = "7.6.0", features = ["fancy"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
