[package]
name = "chezmoi-support"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "chezmoi-support"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
directories.workspace = true
dotfiles-common = { version = "0.1.0", path = "../common" }
flate2.workspace = true
fs-err.workspace = true
hex.workspace = true
miette.workspace = true
serde.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
