[package]
name = "dotfiles-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
duct.workspace = true
fs-err.workspace = true
fs-more.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
which.workspace = true

[lints]
workspace = true
