[package]
name = "dotfiles-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duct = { version = "1.1.1", features = ["timeout"] }
fs-err.workspace = true
fs-more = "0.8.1"
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
which.workspace = true

[lints]
workspace = true
