[package]
name = "lay-by-waybar-scripts"
version = "0.1.0"
edition.workspace = true
description = "Waybar helper scripts for the lay-by host."
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "lay-by-waybar-music"
path = "src/bin/music.rs"

[[bin]]
name = "lay-by-waybar-nvidia"
path = "src/bin/nvidia.rs"

[[bin]]
name = "lay-by-waybar-weather"
path = "src/bin/weather.rs"

[dependencies]
dotfiles-common = { version = "0.1.0", path = "../../../../../crates/dotfiles-common" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
